--- a/4-angular/src/app/app.component.html
+++ b/4-angular/src/app/app.component.html
@@ -88,7 +88,7 @@
                         <strong>{{ persona }}</strong>
                         <!-- EJERCICIO 01 -->
                         <!-- Agregar funcionalidad para eliminar el nombre de la persona de la lista utilizando el span con ❌ -->
-                        <span> ❌ </span>
+                        <span (click)="eliminarPersona(i)"> ❌ </span>
                     </div>
                 </li>
 
@@ -156,13 +156,14 @@
                     name="passkey"
                     [(ngModel)]="registroInputs.passkey"
                     #passkey="ngModel"
+                    minlength="8"
                 >
             </div>
 
             <button [disabled]="registroForm.invalid" type="submit">Registrar</button>
             <!-- EJERCICIO 03 -->
             <!-- * Habilitar botón para limpiar información -->
-            <button>Limpiar</button>
+            <button (click)="limpiarFormulario()">Limpiar</button>
         </form>
     </div>
 
@@ -176,6 +177,7 @@
                 </a>
                 <!-- EJERCICIO 04 -->
                 <!-- * Agregar la imagen del pokemon por medio del endpoint que se encuentra en miPokemon.url -->
+                <img [src]="miPokemon.url" alt="Imagen {{ miPokemon.name }}" />
             </div>
         </div>
     </div>
